@@ -1,108 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2018/10/07 11:18:46 adam Exp $
-bin/gen_client-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/apitools/__init__.py
-${PYSITELIB}/apitools/__init__.pyc
-${PYSITELIB}/apitools/__init__.pyo
-${PYSITELIB}/apitools/base/__init__.py
-${PYSITELIB}/apitools/base/__init__.pyc
-${PYSITELIB}/apitools/base/__init__.pyo
-${PYSITELIB}/apitools/base/protorpclite/__init__.py
-${PYSITELIB}/apitools/base/protorpclite/__init__.pyc
-${PYSITELIB}/apitools/base/protorpclite/__init__.pyo
-${PYSITELIB}/apitools/base/protorpclite/descriptor.py
-${PYSITELIB}/apitools/base/protorpclite/descriptor.pyc
-${PYSITELIB}/apitools/base/protorpclite/descriptor.pyo
-${PYSITELIB}/apitools/base/protorpclite/message_types.py
-${PYSITELIB}/apitools/base/protorpclite/message_types.pyc
-${PYSITELIB}/apitools/base/protorpclite/message_types.pyo
-${PYSITELIB}/apitools/base/protorpclite/messages.py
-${PYSITELIB}/apitools/base/protorpclite/messages.pyc
-${PYSITELIB}/apitools/base/protorpclite/messages.pyo
-${PYSITELIB}/apitools/base/protorpclite/protojson.py
-${PYSITELIB}/apitools/base/protorpclite/protojson.pyc
-${PYSITELIB}/apitools/base/protorpclite/protojson.pyo
-${PYSITELIB}/apitools/base/protorpclite/util.py
-${PYSITELIB}/apitools/base/protorpclite/util.pyc
-${PYSITELIB}/apitools/base/protorpclite/util.pyo
-${PYSITELIB}/apitools/base/py/__init__.py
-${PYSITELIB}/apitools/base/py/__init__.pyc
-${PYSITELIB}/apitools/base/py/__init__.pyo
-${PYSITELIB}/apitools/base/py/base_api.py
-${PYSITELIB}/apitools/base/py/base_api.pyc
-${PYSITELIB}/apitools/base/py/base_api.pyo
-${PYSITELIB}/apitools/base/py/batch.py
-${PYSITELIB}/apitools/base/py/batch.pyc
-${PYSITELIB}/apitools/base/py/batch.pyo
-${PYSITELIB}/apitools/base/py/buffered_stream.py
-${PYSITELIB}/apitools/base/py/buffered_stream.pyc
-${PYSITELIB}/apitools/base/py/buffered_stream.pyo
-${PYSITELIB}/apitools/base/py/compression.py
-${PYSITELIB}/apitools/base/py/compression.pyc
-${PYSITELIB}/apitools/base/py/compression.pyo
-${PYSITELIB}/apitools/base/py/credentials_lib.py
-${PYSITELIB}/apitools/base/py/credentials_lib.pyc
-${PYSITELIB}/apitools/base/py/credentials_lib.pyo
-${PYSITELIB}/apitools/base/py/encoding.py
-${PYSITELIB}/apitools/base/py/encoding.pyc
-${PYSITELIB}/apitools/base/py/encoding.pyo
-${PYSITELIB}/apitools/base/py/encoding_helper.py
-${PYSITELIB}/apitools/base/py/encoding_helper.pyc
-${PYSITELIB}/apitools/base/py/encoding_helper.pyo
-${PYSITELIB}/apitools/base/py/exceptions.py
-${PYSITELIB}/apitools/base/py/exceptions.pyc
-${PYSITELIB}/apitools/base/py/exceptions.pyo
-${PYSITELIB}/apitools/base/py/extra_types.py
-${PYSITELIB}/apitools/base/py/extra_types.pyc
-${PYSITELIB}/apitools/base/py/extra_types.pyo
-${PYSITELIB}/apitools/base/py/gzip.py
-${PYSITELIB}/apitools/base/py/gzip.pyc
-${PYSITELIB}/apitools/base/py/gzip.pyo
-${PYSITELIB}/apitools/base/py/http_wrapper.py
-${PYSITELIB}/apitools/base/py/http_wrapper.pyc
-${PYSITELIB}/apitools/base/py/http_wrapper.pyo
-${PYSITELIB}/apitools/base/py/list_pager.py
-${PYSITELIB}/apitools/base/py/list_pager.pyc
-${PYSITELIB}/apitools/base/py/list_pager.pyo
-${PYSITELIB}/apitools/base/py/stream_slice.py
-${PYSITELIB}/apitools/base/py/stream_slice.pyc
-${PYSITELIB}/apitools/base/py/stream_slice.pyo
-${PYSITELIB}/apitools/base/py/transfer.py
-${PYSITELIB}/apitools/base/py/transfer.pyc
-${PYSITELIB}/apitools/base/py/transfer.pyo
-${PYSITELIB}/apitools/base/py/util.py
-${PYSITELIB}/apitools/base/py/util.pyc
-${PYSITELIB}/apitools/base/py/util.pyo
-${PYSITELIB}/apitools/data/__init__.py
-${PYSITELIB}/apitools/data/__init__.pyc
-${PYSITELIB}/apitools/data/__init__.pyo
-${PYSITELIB}/apitools/data/apitools_client_secrets.json
-${PYSITELIB}/apitools/gen/__init__.py
-${PYSITELIB}/apitools/gen/__init__.pyc
-${PYSITELIB}/apitools/gen/__init__.pyo
-${PYSITELIB}/apitools/gen/extended_descriptor.py
-${PYSITELIB}/apitools/gen/extended_descriptor.pyc
-${PYSITELIB}/apitools/gen/extended_descriptor.pyo
-${PYSITELIB}/apitools/gen/gen_client.py
-${PYSITELIB}/apitools/gen/gen_client.pyc
-${PYSITELIB}/apitools/gen/gen_client.pyo
-${PYSITELIB}/apitools/gen/gen_client_lib.py
-${PYSITELIB}/apitools/gen/gen_client_lib.pyc
-${PYSITELIB}/apitools/gen/gen_client_lib.pyo
-${PYSITELIB}/apitools/gen/message_registry.py
-${PYSITELIB}/apitools/gen/message_registry.pyc
-${PYSITELIB}/apitools/gen/message_registry.pyo
-${PYSITELIB}/apitools/gen/service_registry.py
-${PYSITELIB}/apitools/gen/service_registry.pyc
-${PYSITELIB}/apitools/gen/service_registry.pyo
-${PYSITELIB}/apitools/gen/util.py
-${PYSITELIB}/apitools/gen/util.pyc
-${PYSITELIB}/apitools/gen/util.pyo
-${PYSITELIB}/apitools/scripts/__init__.py
-${PYSITELIB}/apitools/scripts/__init__.pyc
-${PYSITELIB}/apitools/scripts/__init__.pyo
